# mini-logger

./: Cargo.toml  README.md  ref.rs
sample/: Cargo.toml  text.tx
sample/src/: backup.rs  debug.rs  ext_debug.rs  main.rs  test_env_logger.rs  test_mini_logger.rs  try_module.rs
src/: filter.rs  format.rs  formatter.rs  lib.rs  log_msg.rs  logger.rs  macros.rs  output.rs  style.rs  time.rs  writer.rs
src/filter/: filter_config.rs  filter_env.rs  filter_target.rs  mod.rs
src/format/: format_config.rs  mod.rs
src/log_config/: log_message.rs  mod.rs
src/logger/: log_config.rs  log_formatter.rs  log_message.rs  mod.rs
src/record/: log_level.rs  mod.rs  rec_message.rs
src/style/: color.rs  mod.rs  time.rs
src/writer/: buf_format.rs  buffer.rs  buffer_formatter.rs  mod.rs
tests/: mini_logger_test.rs  module_spec_tests.rs  simple_debug_tests.rs
