[package]
name = "mini-logger"
version = "0.1.0"
edition = "2024"
authors = ["ziprangga"]
license = "MIT or Apache-2.0"

# [features]
# default = ["console"]
# all = ["console", "buffer"]
# console = []
# buffer = []

[dependencies]
chrono = "0.4.44"

[[test]]
name = "simple_debug_tests"
harness = false
required-features = ["buffer", "console"]

[[test]]
name = "module_spec_tests"
harness = false
required-features = ["buffer", "console"]

[workspace]
members = [".", "sample"]
